--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ add_executable(bot
 	src/commands/utils.cpp
 	src/commands/topic_cmd.cpp
 	src/commands/coding_cmd.cpp
-)
+	src/commands/close_cmd.cpp
+ )
 
 target_link_libraries(bot
 	PRIVATE dpp::dpp)
