--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,15 +13,21 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/res DESTINATION ${CMAKE_CURRENT_BINARY
 add_executable(bot
 	src/main.cpp
 
+	#globals 
+	src/globals/globals.h
+
 	# commands
 	src/commands/commands.h
 	src/commands/utils.cpp
 	src/commands/topic_cmd.cpp
 	src/commands/coding_cmd.cpp
 	src/commands/close_cmd.cpp
-	src/message_manager/message_handler.cpp
-	src/message_manager/message_handler.h
+
+	# utils
+	src/utils/suggestion/suggestion.cpp
+	src/utils/suggestion/suggestion.h
 )
 
 target_link_libraries(bot
-	PRIVATE dpp::dpp)
+	PRIVATE dpp::dpp
+)
