Add ticket command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(bot
 	src/commands/topic_cmd.cpp
 	src/commands/coding_cmd.cpp
 	src/commands/close_cmd.cpp
+	src/commands/ticket_cmd.cpp
 
 	# utils
 	src/utils/suggestion/suggestion.cpp
