--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install D++ Library
       run: |
         wget https://dl.dpp.dev/latest -O dpp.deb
-        sudo dpkg -i dpp.deb
+        sudo dpkg -i dpp.deb || sudo apt-get install -f -y
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build
