github PR and Issue webhook integration for contributing channel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(dpp CONFIG REQUIRED)
+find_package(httplib CONFIG REQUIRED)
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/config.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/res DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
@@ -29,8 +30,14 @@ add_executable(bot
 	# utils
 	src/utils/suggestion/suggestion.cpp
 	src/utils/suggestion/suggestion.h
-)
+
+	# webhooks 
+	src/webhooks/github_webhook_handler.cpp
+	src/webhooks/github_webhook_handler.h
+
+ )
 
 target_link_libraries(bot
 	PRIVATE dpp::dpp
+	PRIVATE httplib::httplib
 )
