--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,8 @@ add_executable(bot
 	src/commands/close_cmd.cpp
 	src/commands/ticket_cmd.cpp
 	src/commands/code_cmd.cpp
- 	src/commands/project_cmd.cpp
+	src/commands/project_cmd.cpp
+	src/commands/rule_cmd.cpp
 
 	# utils
 	src/utils/suggestion/suggestion.cpp
